--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "daisyui": "^3.5.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.13.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.10.1",
+    "react-particles": "^2.11.0",
+    "react-toggle-dark-mode": "^1.1.1",
+    "tailwindcss": "3.3.3",
+    "tsparticles-slim": "^2.11.1"
   }
 }
